@@ -1,13 +1,15 @@
 package com.API.Expenses.services.Impl;
 
 import com.API.Expenses.DTO.ExpensesDTO;
+import com.API.Expenses.DTO.UsersDTO;
 import com.API.Expenses.models.Expenses;
 import com.API.Expenses.repository.InterfaceExpensesRepository;
 import com.API.Expenses.services.ExpensesServices;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
 import java.util.List;
+import java.util.stream.Collectors;
+
 
 @Service
 public class ExpensesServicesImpl implements ExpensesServices {
@@ -18,12 +20,23 @@ public class ExpensesServicesImpl implements ExpensesServices {
 
     //* OBTENER TODOS LOS GASTOS :
 
-
     @Override
     public List<ExpensesDTO> GetExpenses() {
         List<Expenses> listExpenses = interfaceExpensesRepository.findAll();
-        List<ExpensesDTO> ListExpensesDTO = listExpenses.stream().map(expenses -> new ExpensesDTO(expenses.getId(),expenses.getAmount() , expenses.getCategory() , expenses.getDate())).toList();
-        return ListExpensesDTO;
+        return listExpenses.stream()
+                .map(expenses -> new ExpensesDTO(
+                        expenses.getId(),
+                        expenses.getAmount(),
+                        expenses.getCategory(),
+                        expenses.getDate(),
+                        expenses.getUser()  // Asegúrate de tener un método getUser() en la clase Expenses
+                ))
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public List<Expenses> obtenerGastosPorUsuario(UsersDTO usuario) {
+        return interfaceExpensesRepository.findByUser_id(usuario.getId());
     }
 
 
@@ -37,7 +50,7 @@ public class ExpensesServicesImpl implements ExpensesServices {
         List<Expenses> listExpenses = interfaceExpensesRepository.findAll();
 
         for(int i = 0; i<listExpenses.size(); i++){
-            if(listExpenses.get(i).getId() == id){
+            if(listExpenses.get(i).getId().equals(id)){
                 detailExpensesDTO.setCategory(listExpenses.get(i).getCategory());
                 detailExpensesDTO.setDate(listExpenses.get(i).getDate());
                 detailExpensesDTO.setAmount(listExpenses.get(i).getAmount());
@@ -104,7 +117,6 @@ public class ExpensesServicesImpl implements ExpensesServices {
         return "El gasto fue agregado con exito!";
     }
 
-
     //* ACTUALIZAR LOS GASTOS :
 
     @Override
@@ -134,6 +146,4 @@ public class ExpensesServicesImpl implements ExpensesServices {
         }
         return DetailExpenses.getId();
     }
-
-
 }
